kubernetes/apps/services/hermes-webhooks/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-webhooks
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
